Spacing Titles Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -200,8 +200,8 @@ nav{float:right;}
 }
 
 .intro-img img{
-  height: 400px;
-  width: 400px;
+  height: 300px;
+  width: 300px;
   border-radius: 50%;
   margin: auto;
 }
@@ -209,8 +209,8 @@ nav{float:right;}
 .intro-color-circle{
   display: flex;
   background-color: white;
-  height: 410px;
-  width: 410px;
+  height: 310px;
+  width: 310px;
   border-radius: 50%;
   animation: colorchange 5s linear 1s infinite; /* animation-name followed by duration in seconds*/
      /* you could also use milliseconds (ms) or something like 2.5s */
@@ -344,7 +344,7 @@ nav{float:right;}
   color: #007bff;
   flex-grow: 1;
   width: 100px;
-  margin-left: 17%;
+  margin-left: 5%;
 }
 
 .container-content{
